# Google-ai-platform-engineering

./: .gitignore  README.md  pyproject.toml
config/: gcp_config.yaml
src/document_intelligence/: document_ai_client.py
src/evaluation/: vertex_evaluation.py
src/models/: gemini_client.py
src/pipelines/: vertex_pipeline.py
src/rag/: agent_builder_client.py
src/utils/: config.py  logging.py
tests/unit/: test_agent_builder_client.py  test_gemini_client.py
