[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-ai-platform-engineering"
version = "1.0.0"
description = "Production-grade Google AI Platform Engineering — Vertex AI, Gemini, Agent Builder, Pipelines, Document AI, BigQuery ML, Dialogflow CX"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ramy Amer" }]
requires-python = ">=3.12"

keywords = [
    "google", "gcp", "vertex-ai", "gemini", "agent-builder",
    "bigquery-ml", "document-ai", "dialogflow", "mlops", "rag", "llm"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Google Cloud AI
    "google-cloud-aiplatform>=1.60.0",
    "google-generativeai>=0.7.0",
    "google-cloud-discoveryengine>=0.13.0",   # Agent Builder / Vertex AI Search
    "google-cloud-documentai>=2.27.0",         # Document AI
    "google-cloud-dialogflow-cx>=1.38.0",      # Dialogflow CX

    # Google Cloud Core
    "google-cloud-storage>=2.17.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-bigquery-storage>=2.25.0",
    "google-cloud-logging>=3.10.0",
    "google-cloud-monitoring>=2.22.0",
    "google-cloud-trace>=1.13.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-run>=0.10.0",
    "google-auth>=2.30.0",

    # Vertex AI Pipelines (Kubeflow)
    "kfp>=2.7.0",
    "google-cloud-pipeline-components>=2.14.0",

    # MLflow
    "mlflow>=2.13.0",

    # Data / ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "db-dtypes>=1.2.0",

    # Document handling
    "pypdf>=4.2.0",
    "pillow>=10.3.0",

    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "proto-plus>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

notebooks = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
]

[project.urls]
Repository = "https://github.com/romeosd/google-ai-platform-engineering"
Documentation = "https://github.com/romeosd/google-ai-platform-engineering/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]
